--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Radar 500</title>
 </head>
 <body>
-    <h1>ไอ่อายอ้วนนน</h1>
+    <h1>Radar 500</h1>
+    <p>not server 500</p>
 </body>
 </html>
